# zeroclaw

./: Cargo.toml  cliff.toml
.github/agents/: repo-health-auditor.agent.md
.github/prompts/: full-repo-health-audit.prompt.md
.github/workflows/: changelog.yml  ci.yml  codeql.yml  cross-compile.yml  nightly-canary.yml  release.yml  reproducible-release.yml
audit/: ci-cd.md  code-quality.md  config-api.md  dependencies.md  developer-experience.md  documentation.md  files.md  performance.md  security.md  testing.md
docs/: actions-source-policy.md  audit-logging.md  operational-runbook.md
src/: identity.rs  lib.rs  main.rs
src/agent/: agent.rs  classifier.rs  loop_.rs  mod.rs  prompt.rs  traits.rs
src/auto_reply/: commands.rs  directives.rs  dispatcher.rs  mod.rs  reply.rs  traits.rs
src/channels/: mod.rs
src/config/: mod.rs  schema.rs  traits.rs  workspace.rs
src/cron/: scheduler.rs
src/gateway/: api.rs  mod.rs  traits.rs
src/infra/: daemon.rs  heartbeat.rs  mod.rs  traits.rs  usage.rs
src/media/: local.rs  mod.rs  parser.rs  traits.rs
src/memory/: mod.rs  sqlite.rs
src/observability/: mod.rs  runtime_trace.rs
src/plugins/: manager.rs  mod.rs  traits.rs
src/providers/: compatible.rs  mod.rs  registry.rs  reliable.rs  router.rs  traits.rs
src/routing/: default.rs  mod.rs  traits.rs
src/runtime/: mod.rs
src/security/: mod.rs  traits.rs
src/sessions/: in_memory.rs  mod.rs  traits.rs
src/skills/: markdown.rs  mod.rs  symlink_tests.rs  traits.rs
src/tools/: composio.rs  delegate.rs  file_read.rs  git_operations.rs  image_info.rs  memory_forget.rs  memory_store.rs  mod.rs  schedule.rs  shell.rs
tests/: agent_e2e.rs  config_schema.rs  provider_schema.rs
